syntax = "proto3";

package message;


service MessageService {
    rpc SendMessage(SendMessageRequest) returns (SendMessageRespond) {}
    rpc ReceiveMessage(ReceiveRequest) returns (stream ReceiveRespond) {}
}

message ReceiveRequest {}

message SendMessageRespond {}

message SendMessageRequest {
    string receiver = 1;
    string content = 2;
    string type = 3;
}

message ReceiveRespond {
    string sender = 1;
    string content = 2;
}
